spacing fixed

--- a/front-end/src/css/menus.css
+++ b/front-end/src/css/menus.css
@@ -41,8 +41,7 @@ hr.style-two {
 }
 
 .menu-font {
-  font-size: 90px;
-  letter-spacing: -2px;
+  font-size: 88px;
 }
 
 h1,
